2004-06-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* emacs.d/emacs-d-vars.el:
	initial checkin

	* emacs.d/emacs-d-classes.el:
	initial checkin

	* dotemacs-cust.el:
	initial checkin

	* dotgnus.el:
	use cvs Id.

	* dotemacs.el:
	use cvs Id.

	* perso/mycode.el
	(header-source): make it able to find files in other standard directories
	(c++-mode-hook): call expand-member-functions with complete filenames

	* perso/member-functions.el
	(expand-member-functions): make it work with absolute path files
	fixed indentation :)

	* perso/patches.el
	(split-window-vertically): replaced by advice
	(split-window-horizontally): replaced by advice
	added some documentation
	(switch-to-buffer): packed the previous implementation, made advices

	* dotemacs.el:
	save place by default

	* perso/visible-mark-mode.el
	(visible-mark-move-overlay): fixed nullMarkerException ;)
	(global-visible-mark-mode-exclude-alist): new list of exceptions for global mode
	(visible-mark-mode-maybe): new check for global mode
	(global-visible-mark-mode): use visible-mark-mode-maybe, fixed :group

2004-06-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): use global-visible-mark-mode
	(add-change-log-entry): advice add-change-log-entry to use custom ChangeLog

	* perso/visible-mark-mode.el:
	new module, by forcer and hacked by me

	* erc-config.el:
	initial checkin

	* dotemacs.el:
	(ediff): added ediff configuration
	(request): preview-latex fix
	(make-double-command): new usefull macro from emacswiki
	(totd): new command for fun
	(init): added winring support for ecb
	(erc-config): new module
	(request): replaced 'if by 'when when (or if :)) possible
	(ediff-add-changelog): added the ability to create changelog from diffs
	(yh-project-changelog-file): compute changelog file from project path
	(ediff-add-changelog): override default changelog file

2004-06-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* patches.el
	(message): added advice to disable messages when using the minibuffer
